force-app/main/default/objects/BranchCleanupLog__c/BranchCleanupLog__c.object-meta.xml
<CustomObject>
    <label>Branch Cleanup Log</label>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>Branch Cleanup Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branch Cleanup Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>