force-app/main/default/objects/BranchCleanupLog__c/fields/BatchJobId__c.field-meta.xml
<CustomField>
    <fullName>BatchJobId__c</fullName>
    <description>Async Apex Job ID</description>
    <label>Batch Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>