force-app/main/default/objects/BranchCleanupLog__c/fields/DryRun__c.field-meta.xml
<CustomField>
    <fullName>DryRun__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this was a dry run</description>
    <label>Dry Run</label>
    <type>Checkbox</type>
</CustomField>