force-app/main/default/objects/BranchCleanupLog__c/fields/ExecutionDate__c.field-meta.xml
<CustomField>
    <fullName>ExecutionDate__c</fullName>
    <description>When the operation occurred</description>
    <label>Execution Date</label>
    <type>DateTime</type>
</CustomField>