force-app/main/default/objects/BranchCleanupLog__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Operation name (e.g., &quot;Branch Deletion&quot;)</description>
    <label>Operation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>